implement a route for querying spells locally
* wip

* implement a route for querying spells locally
